<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/libraryHeader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_marginTop="10sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_song_text"/>
    <ListView
        android:id="@+id/songList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">
        <TableRow>
        <Button
            android:id="@+id/loadButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/open_button_text"/>
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/delete_button_text"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
