<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/selectionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/chord_selector_text"/>
    <TableLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <Button
                android:id="@+id/Ab_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_root_tag"
                android:text="Ab"/>
            <Button
                android:id="@+id/A_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_root_tag"
                android:text="A"/>
            <Button
                android:id="@+id/Bb_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_root_tag"
                android:text="Bb"/>
            <Button
                android:id="@+id/B_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_root_tag"
                android:text="B"/>
            <Button
                android:id="@+id/C_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_root_tag"
                android:text="C"/>
            <Button
                android:id="@+id/CSharp_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_root_tag"
                android:text="C#"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/D_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_root_tag"
                android:text="D"/>
            <Button
                android:id="@+id/Eb_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_root_tag"
                android:text="Eb"/>
            <Button
                android:id="@+id/E_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_root_tag"
                android:text="E"/>
            <Button
                android:id="@+id/F_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_root_tag"
                android:text="F"/>
            <Button
                android:id="@+id/FSharp_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_root_tag"
                android:text="F#"/>
            <Button
                android:id="@+id/G_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_root_tag"
                android:text="G"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/five_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_variation_tag"
                android:text="5"/>
            <Button
                android:id="@+id/six_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_variation_tag"
                android:text="6"/>
            <Button
                android:id="@+id/seven_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_variation_tag"
                android:text="7"/>
            <Button
                android:id="@+id/nine_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_variation_tag"
                android:text="9"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/min_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_variation_tag"
                android:text="min"/>
            <Button
                android:id="@+id/min7_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_variation_tag"
                android:text="min7"/>
            <Button
                android:id="@+id/sus_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/chord_variation_tag"
                android:text="sus"/>
            <Button
                android:id="@+id/repeat_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:tag="@string/repeat_tag"
                android:text="@string/repeat_button_text"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:id="@+id/selections"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:id="@+id/selection_image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rest"
            android:tag="selection image"
            android:contentDescription="@string/chord_image_desciption"/>
        <ImageView
            android:id="@+id/selection_image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:tag="selection image"
            android:contentDescription="@string/chord_image_desciption"/>
        <ImageView
            android:id="@+id/selection_image3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:tag="selection image"
            android:contentDescription="@string/chord_image_desciption"/>
        <ImageView
            android:id="@+id/selection_image4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:tag="selection image"
            android:contentDescription="@string/chord_image_desciption"/>
    </LinearLayout>
    <TextView
        android:id="@+id/progressionText"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/chord_progression_text"/>
    <TableLayout
        android:id="@+id/progression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <ImageView
                android:id="@+id/progression_image1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
            <ImageView
                android:id="@+id/progression_image2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
            <ImageView
                android:id="@+id/progression_image3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
            <ImageView
                android:id="@+id/progression_image4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
            <ImageView
                android:id="@+id/progression_image5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
            <ImageView
                android:id="@+id/progression_image6"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
        </TableRow>
        <TableRow>
            <ImageView
                android:id="@+id/progression_image7"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
            <ImageView
                android:id="@+id/progression_image8"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
            <ImageView
                android:id="@+id/progression_image9"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
            <ImageView
                android:id="@+id/progression_image10"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
            <ImageView
                android:id="@+id/progression_image11"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
            <ImageView
                android:id="@+id/progression_image12"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
        </TableRow>
        <TableRow>
            <ImageView
                android:id="@+id/progression_image13"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
            <ImageView
                android:id="@+id/progression_image14"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
            <ImageView
                android:id="@+id/progression_image15"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
            <ImageView
                android:id="@+id/progression_image16"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
            <ImageView
                android:id="@+id/progression_image17"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
            <ImageView
                android:id="@+id/progression_image18"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/rest"
                android:tag="progression image"
                android:contentDescription="@string/chord_image_desciption"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/save_button_text"
            android:tag="@string/save_button_tag"/>
        <Button
            android:id="@+id/helpButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/help_button_text"
            android:tag="@string/help_button_tag"/>
    </LinearLayout>
</LinearLayout>